<resources>
    <string name="app_name">BankingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="user_name">Nom Client</string>
    <string name="id">ID</string>
    <string name="lister_clients">Lister Clients</string>
    <string name="ajouter_client">Ajouter Client</string>
    <string name="delete_client">Supprimer Client</string>
    <string name="save">Enregistrer</string>
    <string name="lister_agences">lister agence</string>
    <string name="ajouter_agence">Ajouter Agence</string>
    <string name="client">Client</string>
    <string name="phoneHint">+22177894939</string>
    <string name="code">CODE</string>
    <string name="ajouter_compte">Ajouter Compte</string>
    <string name="lister_comptes">Lister Comptes</string>
    <string name="decouvert_compte">Decouvert Compte</string>
</resources>
