<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtUId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtUId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/txtUClientname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtClientname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_client"
            android:backgroundTint="#FF0000"
            android:textColor="#ffffff"
            />

    </LinearLayout>
</FrameLayout>