<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.agence.AgenceDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtAgId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtAgId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/txtAgName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nom Agence"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtAgName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtAgAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Addresse"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />
        <EditText
            android:id="@+id/edtAgAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtAgPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Téléphone"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            />


        <EditText
            android:id="@+id/edtTxtAgPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phoneHint"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="#32CD32"
            android:textColor="#ffffff"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_client"
            android:backgroundTint="#FF0000"
            android:textColor="#ffffff"
            />

    </LinearLayout>
</FrameLayout>